# Store-Cold-Nuxt

./: README.md  nuxt.config.js  package-lock.json  package.json  quedaQQ  tailwind.config.js
actix-cms/: Cargo.toml
actix-cms/src/: main.rs
api/: index.js
api/imagenes/: README.md  package.json
api/imagenes/lib/: index.js
api/imagenes/native/: Cargo.toml
api/imagenes/native/src/: infopath.rs  lib.rs
api/mariadb/: conexion.js  get.js  set.js
api/models/: catalogodiscos.js
api/models/catalogos/: artistas.js  formato.js  generos.js  presentacion.js
api/routes/: artistas.js  catalogodiscos.js  formato.js  generos.js  presentacion.js  test.js
components/: BarraInicio.vue  BarraMiniCatalogo.vue  BarraSecundaria.vue  Buscador.vue  CardInfoDisco.vue  CardInfoFull.vue  InsertarCatalogo.vue  MiniCatalogos.vue  VisualizarImgenes.vue
components/crudCatalogo/: BarraMiniCatalogo.vue  BuscarCatalogo.vue  InsertarCatalogo.vue  InsertarEditarCatalogo.vue  MiniCatalogos.vue  VisualizarImgenes.vue
layouts/: default.vue
middleware/: catalogoProductos.js  catalogos.js
pages/: crudCatalago.vue  crudCatalogo.vue  index.vue
pages/Cassette/: index.vue
pages/Cassette/detalles/: _id.vue
pages/Cd/: index.vue
pages/Vinyl/: index.vue
pages/Vinyl/detalles/: _id.vue
pages/crudCatalogo/: agregar.vue  buscar.vue
pages/crudCatalogo/editar/: _id.vue
server/: index.js
store/: catalogoProductos.js  catalogos.js  index.js
