[package]
name = "imagenes"
version = "0.1.0"
authors = ["LaMeraChuleta <geoffreyytorres25@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "my_project"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
blob = "0.3.0"
image = "0.23.8"
rand = "0.7.3"

